# Crypto-Currency-Analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/binance/: __init__.py  exchange_info.py  klines.py  throttle.py  ticker_24hr.py
backend/app/cache/: __init__.py  candles.py
backend/app/market/: __init__.py  routes.py  service.py
backend/app/ml/: __init__.py  features.py  infer.py  policy.py  train.py
backend/app/predict/: __init__.py  routes.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/src/: App.error.test.tsx  App.test.tsx  App.tsx  index.css  predictionPolicy.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: CandleVolumeChart.tsx  SymbolSearch.tsx
openspec/changes/chart-history-ui-polish/: proposal.md  tasks.md
openspec/changes/crypto-dashboard-binance-ml/: design.md  proposal.md  tasks.md
openspec/changes/crypto-trading-ui-fixes/: proposal.md  tasks.md
openspec/changes/tradingview-tier-a/: design.md  proposal.md  tasks.md
openspec/specs/crosshair-as-of-prediction/: spec.md
openspec/specs/dashboard-ui/: spec.md
openspec/specs/ml-price-forecast/: spec.md
tests/: test_binance_integration.py  test_binance_klines.py  test_candle_cache.py  test_exchange_info.py  test_features.py  test_health.py  test_market_api.py  test_market_symbols.py  test_predict_api.py  test_throttle.py  test_ticker_rank.py  test_train_pipeline.py
(+9 files in other folders)
